fix module (first success)